--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ authors = ["Zeke Barnett coding@zeke13.com"]
 description = "A brief description of your crate"
 license = "Apache-2.0"
 repository = "https://github.com/zeke13dev/plutonium"
-homepage = "https://zeke13.com" # not quite open yet; stay tuned!
+homepage = "https://zeke13.com"                       # not quite open yet; stay tuned!
 documentation = "https://docs.rs/plutonium"
 readme = "README.md"
-keywords = ["wgpu", "rendering", "svg", "graphics engine"]
+keywords = ["wgpu", "rendering", "svg"]
 categories = ["graphics", "rendering"]
 edition = "2021"
 
