--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "plutonium"
+name = "plutonium_engine"
 version = "0.1.0"
 authors = ["Zeke Barnett coding@zeke13.com"]
 description = "A brief description of your crate"
