--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "plutonium_engine"
 version = "0.1.0"
 authors = ["Zeke Barnett coding@zeke13.com"]
-description = "A brief description of your crate"
+description = "Pure Rust Graphics Engine"
 license = "Apache-2.0"
 repository = "https://github.com/zeke13dev/plutonium"
 homepage = "https://zeke13.com"                       # not quite open yet; stay tuned!
@@ -25,6 +25,7 @@ smol_str = "0.2.1"
 futures = "0.3.30"
 tokio = "1.37.0"
 glyphon = "0.5.0"
+rusttype = "0.9"
 
 
 [dependencies.bytemuck]
