--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ tokio = "1.37.0"
 glyphon = "0.5.0"
 rusttype = "0.9"
 queues = "1.0.2"
-
+uuid = { version = "1", features = ["v4"] }
 
 [dependencies.bytemuck]
 version = "1.14.1"
