--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,10 @@ smol_str = "0.2.1"
 futures = "0.3.30"
 tokio = "1.37.0"
 glyphon = "0.5.0"
-rusttype = "0.9"
 queues = "1.0.2"
+rusttype = "0.9.3"
+ab_glyph_rasterizer = "0.1.8"
+
 uuid = { version = "1", features = ["v4"] }
 
 [dependencies.bytemuck]
