--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "plutonium_engine"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Zeke Barnett coding@zeke13.com"]
 description = "Pure Rust Graphics Engine"
 license = "Apache-2.0"
 repository = "https://github.com/zeke13dev/plutonium"
 homepage = "https://zeke13.com"                       # not quite open yet; stay tuned!
-documentation = "https://docs.rs/plutonium"
+documentation = "https://docs.rs/plutonium_engine"
 readme = "README.md"
 keywords = ["wgpu", "rendering", "svg"]
 categories = ["graphics", "rendering"]
