feat: parallel asset loading and comprehensive clippy fixes for v0.8.0
## New Features
- Add parallel asset loading with rayon dependency
- Implement process_load_requests_parallel() with parallel validation
- Add batch_load_assets() convenience function
- Maintain backward compatibility with existing API

## Code Quality Improvements
- Fix all clippy warnings for CI compliance
- Add proper dead_code annotations for GPU-only structs
- Replace manual div_ceil with built-in method
- Fix lifetime annotations in buffer slice methods
- Improve type complexity with type aliases
- Clean up unused imports and variables

## Performance
- Parallel file validation for asset loading
- Sequential GPU operations for thread safety
- Enhanced error handling with missing file warnings

--- a/plutonium_game/crates/assets/Cargo.toml
+++ b/plutonium_game/crates/assets/Cargo.toml
@@ -11,6 +11,7 @@ plutonium_game_core = { path = "../core" }
 plutonium_engine = { path = "../../../" }
 uuid = { version = "1" }
 toml = "0.8"
+rayon = "1.10"
 
 [features]
 dev-hot-reload = []
